@@ -89,6 +89,10 @@ Core and Builtins
 Library
 -------
 
+- Issue #27776: The :func:`os.urandom` function does now block on Linux 3.17
+  and newer until the system urandom entropy pool is initialized to increase
+  the security. This change is part of the :pep:`524`.
+
 - Issue #27778: Expose the Linux ``getrandom()`` syscall as a new
   :func:`os.getrandom` function. This change is part of the :pep:`524`.
 
